--- a/externalCss/global.css
+++ b/externalCss/global.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&display=swap");
 
+:root {
+  --mainColor: #ff5530;
+  --bgColor: #111;
+  --divColor: #222;
+  --hoverColor: #ff3d12;
+  --shadowColor: rgba(255, 85, 48, 0.25);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +24,7 @@ a {
   position: fixed;
   inset: 0;
   margin: auto;
-  background-color: #222;
+  background-color: var(--divColor);
   border-radius: 5px;
   text-align: start;
   border: none;
@@ -29,7 +37,7 @@ a {
 }
 
 .error__msg h3 {
-  background-color: #111;
+  background-color: var(--bgColor);
   padding: 10px 5px;
   border-radius: 5px 5px 0 0;
 }
@@ -56,7 +64,7 @@ a {
   padding: 10px;
   border-radius: 5px;
 
-  background-color: #ff5530;
+  background-color: var(--mainColor);
   color: white;
   outline: none;
   border: none;
@@ -73,7 +81,7 @@ a {
 
   margin: auto;
   padding: 10px;
-  background-color: #222;
+  background-color: var(--divColor);
   border-radius: 5px;
   max-width: 400px;
   height: fit-content;
@@ -132,9 +140,9 @@ a {
   width: 20px;
   height: 20px;
   border-radius: 3px;
-  box-shadow: 0 0 5px #ff5530;
+  box-shadow: 0 0 5px var(--mainColor);
   animation: scaleInOut 1s infinite;
-  background-color: #ff5530;
+  background-color: var(--mainColor);
 }
 
 @keyframes scaleInOut {
